fixed header image not showing

--- a/src/components/shared/Header/index.module.less
+++ b/src/components/shared/Header/index.module.less
@@ -38,7 +38,7 @@
   display: block;
   width: 100%;
   height: 290px;
-  background-image: url("../../../images/graphics/shape-header-big.svg");
+  background-image: url("/shape-header-big.svg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
